// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid LuaPairsIterable without destructuring ("for (const s of testIterable) {}"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local testIterable = {a1 = "a2", b1 = "b2", c1 = "c2"}
    for ____ in pairs(testIterable) do
    end
end
return ____exports"
`;

exports[`invalid LuaPairsIterable without destructuring ("for (const s of testIterable) {}"): diagnostics 1`] = `"main.ts(5,20): error TSTL: LuaPairsIterable type must be destructured in a for...of statement."`;

exports[`invalid LuaPairsIterable without destructuring ("let s; for (s of testIterable) {}"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local testIterable = {a1 = "a2", b1 = "b2", c1 = "c2"}
    local s
    for ____ in pairs(testIterable) do
    end
end
return ____exports"
`;

exports[`invalid LuaPairsIterable without destructuring ("let s; for (s of testIterable) {}"): diagnostics 1`] = `"main.ts(5,21): error TSTL: LuaPairsIterable type must be destructured in a for...of statement."`;
